# gr-kb3gtn

./: CMakeLists.txt  MANIFEST.md  readme.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-kb3gtnConfig.cmake
docs/: CMakeLists.txt  README.kb3gtn
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  kb3gtn_win_min_max.block.yml
include/gnuradio/kb3gtn/: CMakeLists.txt  api.h  win_min_max.h
lib/: CMakeLists.txt  win_min_max_impl.cc  win_min_max_impl.h
python/kb3gtn/: CMakeLists.txt  __init__.py  qa_win_min_max.py
python/kb3gtn/bindings/: CMakeLists.txt  python_bindings.cc  win_min_max_python.cc
python/kb3gtn/bindings/docstrings/: win_min_max_pydoc_template.h
